edgar/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: edgar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edgar
  template:
    metadata:
      labels:
        app: edgar
    spec:
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
            defaultMode: 420
      containers:
        - name: nginx
          image: niiku/nginx:1.19-alpine
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              memory: 64Mi
              cpu: 25m
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/
