edgar/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: edgar
  name: edgar
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: edgar
  type: ClusterIP
