edgar/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: edgar
  name: edgar
spec:
  host: edgar.apps.baloise.dev
  path: /
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: edgar
